# sql-agent

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: init_db.py
sql_agent/: config.py  examples.py  prompts.py
