[tool.poetry]
name = "sql-agent"
version = "0.1.0"
description = ""
authors = ["Jorge Andres Padilla <jorgeandres.padillasalgado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.9"
langchain-community = "^0.0.24"
langchain-openai = "^0.0.8"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.7.4"
streamlit = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
